# dual_ur_ros_2

./: README.md
dual_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_ur5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.urdf.xacro
dual_ur5_moveit_config/launch/: demo.launch.py  dual_ur_moveit_planning.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_moveit.launch.py  warehouse_db.launch.py
dual_ur5_moveit_config/srdf/: ur.srdf
dual_ur_description/: CMakeLists.txt  package.xml
dual_ur_description/launch/: view_ur.launch.py
dual_ur_description/meshes/: arm_base.STL
dual_ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
dual_ur_description/urdf/: dual_ur.urdf copy.xacro  dual_ur.urdf.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
print_trajectory/: CMakeLists.txt  package.xml
print_trajectory/script/: plot.py
print_trajectory/src/: rtde_driver.cpp
receive_command/: CMakeLists.txt  package.xml
receive_command/src/: fix_send.cpp  keyboard.cpp  keyboard_dual.cpp  manual_distance.cpp  tcp.cpp  udp.cpp
robot_control/: CMakeLists.txt  package.xml
robot_control/launch/: keyboard.launch.py
robot_control/src/: remote.cpp
robot_control_msgs/: CMakeLists.txt  package.xml
robot_control_msgs/msg/: Joint.msg  Moblie.msg  Pose.msg
rtde_driver/: CMakeLists.txt
(+24 files in other folders)
